--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,19 @@
 [[constraint]]
   name = "github.com/gorilla/websocket"
   version = "1.4.1"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/jinzhu/copier"
+
+[[constraint]]
+  name = "github.com/golang/mock"
+  version = "1.3.1"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.4.0"
